--- a/app.less
+++ b/app.less
@@ -5,6 +5,10 @@
 @fa-font-path: "bower_components/font-awesome/fonts";
 
 /* Component LESS */
+@import "features/attachments/upload-progress/upload-progress";
+@import "features/attachments/sample-page/sample-page.less";
+@import "features/attachments/attachments-directive.less";
+@import "features/header/header-partial.less";
 /* Add Component LESS Above */
 
 /* Required for Angular UI Bootstrap */
