Adds media player

--- a/app.less
+++ b/app.less
@@ -9,6 +9,7 @@
 @import "features/attachments/sample-page/sample-page.less";
 @import "features/attachments/attachments-directive.less";
 @import "features/header/header-partial.less";
+@import "features/player/modal-viewer/modal-viewer.less";
 /* Add Component LESS Above */
 
 /* Required for Angular UI Bootstrap */
