Separates round style progress in separate directive

--- a/app.less
+++ b/app.less
@@ -5,11 +5,11 @@
 @fa-font-path: "bower_components/font-awesome/fonts";
 
 /* Component LESS */
-@import "features/attachments/upload-progress/upload-progress";
 @import "features/attachments/sample-page/sample-page.less";
 @import "features/attachments/attachments-directive.less";
 @import "features/header/header-partial.less";
 @import "features/player/modal-viewer/modal-viewer.less";
+@import "features/common/directives/round-progress/upload-progress-directive.less";
 /* Add Component LESS Above */
 
 /* Required for Angular UI Bootstrap */
