--- a/features/player/modal-viewer/modal-viewer.less
+++ b/features/player/modal-viewer/modal-viewer.less
@@ -1,3 +1,16 @@
+.modal-header {
+    position: relative;
+    .modal-title {
+        margin-right: 15px;
+    }
+
+    .close {
+        position: absolute;
+        right: 15px;
+        top: 22px;
+    }
+}
+
 .wistia-player {
     top: 0;
     left: 0;
