--- a/style/main.css
+++ b/style/main.css
@@ -8,7 +8,9 @@ a {
 
 .site-sidenav,
 .site-sidenav.md-locked-open-add-active,
+.site-sidenav md-content,
 .site-sidenav.md-locked-open {
+    color: white;
     background-color: #106CC8;
     width: 256px;
     min-width: 256px;
