Fixes documentation menu styling.

--- a/partials/menu-toggle.tmpl.html
+++ b/partials/menu-toggle.tmpl.html
@@ -5,14 +5,14 @@
     <div flex layout="row">
         {{section.name}}
         <span flex></span>
-        <span aria-hidden="true" class="md-toggle-icon"
-              ng-class="{\'toggled\' : isOpen()}">
-            <md-icon md-svg-src="md-toggle-arrow"></md-icon>
-        </span>
+       <span aria-hidden="true" class="md-toggle-icon"
+             ng-class="{'toggled' : isOpen()}">
+         <md-icon md-svg-src="md-toggle-arrow"></md-icon>
+       </span>
     </div>
   <span class="md-visually-hidden">
-        Toggle {{isOpen()? \'expanded\' : \'collapsed\'}}
-  </span>
+       Toggle {{isOpen()? 'expanded' : 'collapsed'}}
+     </span>
 </md-button>
 
 <ul id="docs-menu-{{section.name | nospace}}" class="menu-toggle-list">
