--- a/style/main.css
+++ b/style/main.css
@@ -135,3 +135,28 @@ docs-menu, .docs-menu ul {
     transform: rotate(0deg);
     -webkit-transform: rotate(0deg);
 }
+
+.layout-content, .doc-content {
+    max-width: 864px;
+    margin: 16px;
+    box-sizing: border-box;
+}
+
+.doc-content h2,
+.md-headline {
+    font-size: 24px;
+    font-weight: 400;
+    line-height: 32px;
+}
+
+a {
+    color: #106CC8;
+    text-decoration: none;
+    font-weight: 400;
+    border-bottom: 1px solid rgba(64, 84, 178, 0.25);
+    -webkit-transition: border-bottom 0.35s;
+    -moz-transition: border-bottom 0.35s;
+    -ms-transition: border-bottom 0.35s;
+    -o-transition: border-bottom 0.35s;
+    transition: border-bottom 0.35s;
+}
