--- a/partials/introduction.tmpl.html
+++ b/partials/introduction.tmpl.html
@@ -8,8 +8,8 @@
 <h2>What is Wistia?</h2>
 
 <p>
-    <a href="http://wistia.com/product"><img src="img/wistia_logo.png" alt="Wistia" style="height: 12px;"></a> is
-    professional video hosting service with support of analytics and video marketing tools. Wistia has
-    <a href="http://wistia.com/doc/categories/developers">developer API</a> that this module uses to expose Angular
-    directives and services.
+    <a href="http://wistia.com/product" target="_blank"><img src="img/wistia_logo.png" alt="Wistia" style="height: 12px;"></a>
+    is professional video hosting service with support of analytics and video marketing tools. Wistia has
+    <a href="http://wistia.com/doc/categories/developers" target="_blank">developer API</a> that this module uses to
+    expose Angular directives and services.
 </p>
