--- a/partials/introduction.tmpl.html
+++ b/partials/introduction.tmpl.html
@@ -1,3 +1,7 @@
+<p class="disclaimer">
+    <strong>DISCLAIMER</strong>: I or angular-wistia have no association with the Wistia company.
+</p>
+
 <h2>Introduction</h2>
 
 <p>
