--- a/partials/introduction.tmpl.html
+++ b/partials/introduction.tmpl.html
@@ -1,5 +1,6 @@
 <p class="disclaimer">
-    <strong>DISCLAIMER</strong>: I or angular-wistia have no association with the Wistia company.
+    <strong>DISCLAIMER</strong>: I or angular-wistia have no association with the <a href="http://wistia.com/product" target="_blank">Wistia</a>
+    company.
 </p>
 
 <h2>Introduction</h2>
