Adds angular-wistia library

--- a/partials/wistia-data.tmpl.html
+++ b/partials/wistia-data.tmpl.html
@@ -1,1 +1,16 @@
 <h2>wistiaData server</h2>
+
+<table ng-controller="WistiaDataPageCtrl as vm">
+    <thead>
+    <tr>
+        <th>Parameter</th>
+        <th>Type</th>
+        <th>Description</th>
+    </tr>
+    </thead>
+    <tbody>
+    <tr>
+        <td></td>
+    </tr>
+    </tbody>
+</table>
