--- a/partials/wistia-data.tmpl.html
+++ b/partials/wistia-data.tmpl.html
@@ -1,18 +1,56 @@
 <h2>wistiaData server</h2>
 
-<table ng-controller="WistiaDataPageCtrl as vm">
-    <thead>
-    <tr>
-        <th>Name</th>
-        <th>Duration</th>
-        <th>Thumbnail</th>
-    </tr>
-    </thead>
-    <tbody>
-    <tr ng-repeat="m in vm.medias">
-        <td>{{m.name}}</td>
-        <td>{{m.duration}}</td>
-        <td><img ng-src="{{m.thumbnail.url}}"></td>
-    </tr>
-    </tbody>
-</table>
+<div ng-controller="WistiaDataPageCtrl as vm">
+    <h3>Projects</h3>
+    <table>
+        <thead>
+        <tr>
+            <th>Name</th>
+            <th>Description</th>
+            <th>Number of Media</th>
+            <th>Actions</th>
+        </tr>
+        </thead>
+        <tbody>
+        <tr ng-repeat="p in vm.projects">
+            <td>{{p.name}}</td>
+            <td>{{p.description}}</td>
+            <td>{{p.mediaCount}}</td>
+            <td>
+                <md-button class="md-fab md-primary md-mini">
+                    <md-icon md-font-icon="fa-pencil-square-o" class="fa"></md-icon>
+                </md-button>
+                <md-button class="md-fab md-mini">
+                    <md-icon md-font-icon="fa-times" class="fa"></md-icon>
+                </md-button>
+            </td>
+        </tr>
+        </tbody>
+    </table>
+    <h3>Medias</h3>
+    <table>
+        <thead>
+        <tr>
+            <th>Name</th>
+            <th>Duration</th>
+            <th>Thumbnail</th>
+            <th>Actions</th>
+        </tr>
+        </thead>
+        <tbody>
+        <tr ng-repeat="m in vm.medias">
+            <td>{{m.name}}</td>
+            <td>{{m.duration}}</td>
+            <td><img ng-src="{{m.thumbnail.url}}"></td>
+            <td>
+                <md-button class="md-fab md-primary md-mini">
+                    <md-icon md-font-icon="fa-pencil-square-o" class="fa"></md-icon>
+                </md-button>
+                <md-button class="md-fab md-mini">
+                    <md-icon md-font-icon="fa-times" class="fa"></md-icon>
+                </md-button>
+            </td>
+        </tr>
+        </tbody>
+    </table>
+</div>
