Adds project dialog

--- a/partials/wistia-data.tmpl.html
+++ b/partials/wistia-data.tmpl.html
@@ -1,3 +1,31 @@
+<script type="text/ng-template" id="project.html">
+    <md-dialog aria-label="Project">
+        <md-dialog-content>
+            <form name="projectForm">
+                <md-input-container class="md-block">
+                    <label>Name</label>
+                    <input required name="name" ng-model="project.name">
+                    <div ng-messages="projectForm.name.$error">
+                        <div ng-message="required">This is required.</div>
+                    </div>
+                </md-input-container>
+                <md-input-container class="md-block">
+                    <label>Description</label>
+                    <input md-maxlength="30" required name="description" ng-model="project.description">
+                    <div ng-messages="projectForm.description.$error">
+                        <div ng-message="md-maxlength">The name has to be less than 30 characters long.</div>
+                    </div>
+                </md-input-container>
+            </form>
+        </md-dialog-content>
+        <md-dialog-actions>
+            <md-button>Cancel</md-button>
+            <md-button class="md-primary">Save</md-button>
+        </md-dialog-actions>
+    </md-dialog>
+</script>
+
+
 <h2>wistiaData server</h2>
 
 <div ng-controller="WistiaDataPageCtrl as vm">
@@ -63,56 +91,6 @@
             </tbody>
         </table>
 
-    </section>
-    <section class="ng-hideA">
-        <form name="projectForm">
-            <md-input-container class="md-block">
-                <label>Name</label>
-                <input required name="name" ng-model="project.name">
-                <div ng-messages="projectForm.name.$error">
-                    <div ng-message="required">This is required.</div>
-                </div>
-            </md-input-container>
-            <md-input-container class="md-block">
-                <label>Description</label>
-                <input md-maxlength="30" required name="description" ng-model="project.description">
-                <div ng-messages="projectForm.description.$error">
-                    <div ng-message="md-maxlength">The name has to be less than 30 characters long.</div>
-                </div>
-            </md-input-container>
-            <md-input-container class="md-block">
-                <label>Client Email</label>
-                <input required type="email" name="clientEmail" ng-model="project.clientEmail"
-                       minlength="10" maxlength="100" ng-pattern="/^.+@.+\..+$/" />
-                <div ng-messages="projectForm.clientEmail.$error" role="alert">
-                    <div ng-message-exp="['required', 'minlength', 'maxlength', 'pattern']">
-                        Your email must be between 10 and 100 characters long and look like an e-mail address.
-                    </div>
-                </div>
-            </md-input-container>
-            <md-input-container class="md-block">
-                <label>Hourly Rate (USD)</label>
-                <input required type="number" step="any" name="rate" ng-model="project.rate" min="800"
-                       max="4999" ng-pattern="/^1234$/" md-maxlength="20" />
-                <div ng-messages="projectForm.rate.$error" multiple>
-                    <div ng-message="required">
-                        You've got to charge something! You can't just <b>give away</b> a Missile Defense
-                        System.
-                    </div>
-                    <div ng-message="min">
-                        You should charge at least $800 an hour. This job is a big deal... if you mess up,
-                        everyone dies!
-                    </div>
-                    <div ng-message="pattern">
-                        You should charge exactly $1,234.
-                    </div>
-                    <div ng-message="max">
-                        {{projectForm.rate.$viewValue | currency:"$":0}} an hour? That's a little ridiculous. I
-                        doubt event Bill Clinton could afford that.
-                    </div>
-                </div>
-            </md-input-container>
-        </form>
     </section>
 
 </div>
